MB-57609: Do not increment numGetFailure for document not found

The kv_ep_data_read_failed stat is used by ns_server to detect sustained
disk errors and fail over the node.

Do not increment the stat when the document does not exist.

Change-Id: I7847528106a42dfcc6255e7d943e68a2131b6653
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/193173
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Reviewed-by: James H <james.harrison@couchbase.com>
Well-Formed: Restriction Checker